--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.20",
-    "axios": "^1.5.1",
+    "axios": "^1.6.2",
     "tsx": "^3.14.0",
     "vitest": "^0.34.6"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "mongoose": "^8.0.2"
   }
 }
